--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "globals" : {
+  "globals": {
     "rawData": true,
     "app": true,
     "Handlebars": true,
@@ -20,15 +20,16 @@
     "es6": true
   },
   "rules": {
-    "eqeqeq": ["error", "always"],
-    "no-template-curly-in-string": "error",
     "no-console": "off",
     "no-undefined": "off",
-    "indent": ["error", 2],
-    "quotes": ["warn", "single", {"allowTemplateLiterals": true}],
-    "no-multi-spaces": ["warn", {"exceptions": { "VariableDeclarator": true }}],
-    "no-trailing-spaces": "warn",
     "new-cap": "warn",
-    "no-redeclare": ["error", { "builtinGlobals": true }]
+    "no-trailing-spaces": "warn",
+    "quotes": ["warn", "single", {"allowTemplateLiterals": true}],
+    "no-multi-spaces": ["warn", {"exceptions": {"VariableDeclarator": true}}],
+    "no-template-curly-in-string": "error",
+    "eqeqeq": ["error", "always"],
+    "semi": ["error", "always"],
+    "indent": ["error", 2],
+    "no-redeclare": ["error", {"builtinGlobals": true}]
   }
 }
